--- a/_posts/2016-05-16-welcome.md
+++ b/_posts/2016-05-16-welcome.md
@@ -8,6 +8,6 @@ tags: [ 'intro', 'Mesa', 'GSoC' ]
 
 Hi,
 
-In this blog is built in order to show you each steps of the implementation of a double precision floating point library.
-This project take plake with [Mesa](http://www.mesa3d.org/) for the [Google Summer of Code](https://developers.google.com/open-source/gsoc/).
+I create this blog in order to show you each steps of the implementation of a double precision floating point library.
+This project take place with [Mesa](http://www.mesa3d.org/) for the [Google Summer of Code](https://developers.google.com/open-source/gsoc/).
 My GSoC proposal can be found on [GitHub](https://github.com/Hopetech/GSOC_Proposal).
