--- a/_posts/2016-05-16-welcome.md
+++ b/_posts/2016-05-16-welcome.md
@@ -2,8 +2,7 @@
 layout: post
 section-type: post
 title: Welcome to my blog
-category: tech
-tags: [ 'intro', 'Mesa', 'GSoC' ]
+tags: [ 'Mesa', 'GSoC' ]
 ---
 
 Hi,
